fix z-index

--- a/src/components/layout/_GeneralLayout.scss
+++ b/src/components/layout/_GeneralLayout.scss
@@ -18,4 +18,5 @@
 
 .appLayout {
     padding: 0 16px;
+    z-index: 1 !important;
 }
